--- a/Styles.css
+++ b/Styles.css
@@ -7,10 +7,10 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
+    height: 70px;
     background-color: white;
     color: #fff;
-    font-size: 18px;
+    font-size: 16px;
     font-family: Arial, sans-serif;
     box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.5);
   }
@@ -20,17 +20,23 @@ nav {
   
   .left-section a,
   .right-section a {
-    margin: 0 30px;
+    margin: 0 10px;
     text-decoration: none;
     color: black;
+  }
+
+  .local {
+    font-size: 16px;
   }
   
   .center-section a {
     font-family: Oswald, sans-serif;
     font-size: 35px;
-    font-weight: 500;
+    font-weight: 450;
     text-decoration: none;
     color: black;
+
+
   }
   
 .right-section{
@@ -38,9 +44,9 @@ nav {
 }
 
   .news {
-    padding: .5rem 1.5rem;
+    padding: .3rem 1.5rem;
     background-color: black;
-    font-size: 12pt;
+    font-size: 10pt;
     border-radius: 50px;
     color: white;
 
